Aggiunto il supporto per superapk